--- a/about-us.html
+++ b/about-us.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description"  content="Corporate Animation | Advertising Template | Mockup | Minimal Presentation Template | Pitch Deck Agency | Corporate Animation Background | Template Design | Abstract Background | Animator on AdobeStock & Shutterstock" />
-    <meta name="author" content="IG Design">
+    <meta name="author" content="SPurno Animation Studio">
     <meta name="keywords"  content="animation background, digital wallpaper, motion background, business presentation, business presentation templates, business powerpoint templates,moving backgrounds, startup pitch deck, live wallpapersfree motion backgrounds,free motion backgrounds for worship,pitch deck services,pitch deck design agency,business plan presentation,pitch deck companies,church motion graphics free,business plan ppt,free animated backgrounds,lively wallpaper download,best powerpoint templates for business,creating a pitch deck,startup pitch deck examples,motion backgrounds for church free,pitch deck design company,worship background,business pitch deck,live wallpaper download,investment pitch deck,business plan powerpoint,motion loops,powerpoint design company,live wallpaper, 4kfree moving backgrounds,business pitch" />
     <meta property="og:title" content="Corporate Animation Artist" />
     <meta property="og:type" content="website" />
