--- a/index.html
+++ b/index.html
@@ -62,137 +62,9 @@
     <main>
       <!-- Header -->
       <header id="js-header" class="u-header u-header--static u-shadow-v19">
-        <!-- Top Bar -->
-        <div class="u-header__section g-brd-bottom g-brd-gray-light-v4 g-py-18">
-          <div class="container">
-            <div class="row align-items-center">
-              <!-- Logo -->
-              <div class="col-md-3 g-hidden-md-down">
-                <a href="https://spurno.github.io" class="navbar-brand">
-                  <img src="assets/img/logo/logo.png" alt="SPurno Animation Studio Logo" style="height: 100px; width: 100px;">
-                </a>
-              </div>
-              <!-- End Logo -->
-
-              <!-- Subscribe Form -->
-              <div class="col-6 col-md-5">
-                <form class="input-group rounded">
-                  <input class="form-control w-100 g-brd-secondary-light-v2 g-brd-primary--focus g-color-secondary-dark-v1 g-placeholder-secondary-dark-v1 g-bg-white g-font-weight-400 g-font-size-13 rounded g-px-20 g-py-12" type="text" placeholder="Search the entire site">
-                  <span class="input-group-addon g-brd-none g-py-0 g-pr-0">
-                    <button class="btn u-btn-white g-color-primary--hover g-bg-secondary g-font-weight-600 g-font-size-13 text-uppercase rounded g-py-12 g-px-20" type="submit">
-                      <span class="g-hidden-md-down">Search</span>
-                      <i class="g-hidden-lg-up fa fa-search"></i>
-                    </button>
-                  </span>
-                </form>
-              </div>
-              <!-- End Subscribe Form -->
-
-              <!-- Language -->
-              <div class="col-4 col-lg-2 g-pos-rel g-px-15 ml-auto">
-                <a id="languages-dropdown-invoker" class="g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover" href="#"
-                   aria-controls="languages-dropdown"
-                   aria-haspopup="true"
-                   aria-expanded="false"
-                   data-dropdown-event="hover"
-                   data-dropdown-target="#languages-dropdown"
-                   data-dropdown-type="css-animation"
-                   data-dropdown-duration="300"
-                   data-dropdown-hide-on-scroll="false"
-                   data-dropdown-animation-in="fadeIn"
-                   data-dropdown-animation-out="fadeOut">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="11" width="27" viewBox="0 0 640 480">
-                    <defs>
-                      <clipPath id="a">
-                        <path fill-opacity=".67" d="M-85.333 0h682.67v512h-682.67z"/>
-                      </clipPath>
-                    </defs>
-                    <g clip-path="url(#a)" transform="translate(80) scale(.94)">
-                      <g stroke-width="1pt">
-                        <path fill="#006" d="M-256 0H768.02v512.01H-256z"/>
-                        <path d="M-256 0v57.244l909.535 454.768H768.02V454.77L-141.515 0H-256zM768.02 0v57.243L-141.515 512.01H-256v-57.243L653.535 0H768.02z" fill="#fff"/>
-                        <path d="M170.675 0v512.01h170.67V0h-170.67zM-256 170.67v170.67H768.02V170.67H-256z" fill="#fff"/>
-                        <path d="M-256 204.804v102.402H768.02V204.804H-256zM204.81 0v512.01h102.4V0h-102.4zM-256 512.01L85.34 341.34h76.324l-341.34 170.67H-256zM-256 0L85.34 170.67H9.016L-256 38.164V0zm606.356 170.67L691.696 0h76.324L426.68 170.67h-76.324zM768.02 512.01L426.68 341.34h76.324L768.02 473.848v38.162z" fill="#c00"/>
-                      </g>
-                    </g>
-                  </svg>
-                  <span>English</span> <i class="g-hidden-sm-down fa fa-angle-down g-ml-7"></i>
-                </a>
-
-                <ul id="languages-dropdown" class="list-unstyled g-width-160 g-brd-around g-brd-secondary-light-v2 g-bg-white rounded g-pos-abs g-py-5 g-mt-32"
-                    aria-labelledby="languages-dropdown-invoker">
-                  <li>
-                    <a class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20" href="#">
-                      <svg class="mr-1 g-ml-minus-6" xmlns="http://www.w3.org/2000/svg" height="11" width="27" viewBox="0 0 640 480">
-                        <defs>
-                          <clipPath id="a">
-                            <path fill-opacity=".67" d="M-85.333 0h682.67v512h-682.67z"/>
-                          </clipPath>
-                        </defs>
-                        <g clip-path="url(#a)" transform="translate(80) scale(.94)">
-                          <g stroke-width="1pt">
-                            <path fill="#006" d="M-256 0H768.02v512.01H-256z"/>
-                            <path d="M-256 0v57.244l909.535 454.768H768.02V454.77L-141.515 0H-256zM768.02 0v57.243L-141.515 512.01H-256v-57.243L653.535 0H768.02z" fill="#fff"/>
-                            <path d="M170.675 0v512.01h170.67V0h-170.67zM-256 170.67v170.67H768.02V170.67H-256z" fill="#fff"/>
-                            <path d="M-256 204.804v102.402H768.02V204.804H-256zM204.81 0v512.01h102.4V0h-102.4zM-256 512.01L85.34 341.34h76.324l-341.34 170.67H-256zM-256 0L85.34 170.67H9.016L-256 38.164V0zm606.356 170.67L691.696 0h76.324L426.68 170.67h-76.324zM768.02 512.01L426.68 341.34h76.324L768.02 473.848v38.162z" fill="#c00"/>
-                          </g>
-                        </g>
-                      </svg>
-                      English
-                    </a>
-                  </li>
-                  <li>
-                    <a class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20" href="#">
-                      <svg class="mr-1 g-ml-minus-6" xmlns="http://www.w3.org/2000/svg" height="11" width="27" viewBox="0 0 640 480">
-                        <g stroke-width="1pt" fill-rule="evenodd">
-                          <path fill="#fff" d="M0 0h640v480H0z"/>
-                          <path fill="#00267f" d="M0 0h213.33v480H0z"/>
-                          <path fill="#f31830" d="M426.67 0H640v480H426.67z"/>
-                        </g>
-                      </svg>
-                      Spanish
-                    </a>
-                  </li>
-                  <li>
-                    <a class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20" href="#">
-                      <svg class="mr-1 g-ml-minus-6" xmlns="http://www.w3.org/2000/svg" height="11" width="27" viewBox="0 0 640 480">
-                        <g fill-rule="evenodd" stroke-width="1pt">
-                          <path fill="#fff" d="M0 0h640v480H0z"/>
-                          <path fill="#0039a6" d="M0 160.003h640V480H0z"/>
-                          <path fill="#d52b1e" d="M0 319.997h640V480H0z"/>
-                        </g>
-                      </svg>
-                      Russian
-                    </a>
-                  </li>
-                  <li>
-                    <a class="d-block g-color-secondary-dark-v1 g-color-primary--hover g-text-underline--none--hover g-py-5 g-px-20" href="#">
-                      <svg class="mr-1 g-ml-minus-6" xmlns="http://www.w3.org/2000/svg" height="11" width="27" viewBox="0 0 640 480">
-                        <path fill="#ffce00" d="M0 320h640v160.002H0z"/>
-                        <path d="M0 0h640v160H0z"/>
-                        <path fill="#d00" d="M0 160h640v160H0z"/>
-                      </svg>
-                      German
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <!-- End Language -->
-
-            </div>
-          </div>
-        </div>
-        <!-- End Top Bar -->
-
         <div class="u-header__section u-header__section--light g-bg-white g-transition-0_3 g-py-10">
           <nav class="js-mega-menu navbar navbar-expand-lg g-px-0">
             <div class="container g-px-15">
-              <!-- Logo -->
-              <a class="navbar-brand g-hidden-lg-up" href="#">
-                <img src="assets/img/logo/logo.png" alt="Logo">
-              </a>
-              <!-- End Logo -->
-
               <!-- Responsive Toggle Button -->
               <button class="navbar-toggler navbar-toggler-right btn g-line-height-1 g-brd-none g-pa-0 ml-auto" type="button"
                       aria-label="Toggle navigation"
@@ -1105,12 +977,12 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">visit my Shutterstock profile for purchase.
+                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">
                     </div>
 
                     <!-- LAYER NR. 14 -->
                     <a class="tp-caption rev-btn  tp-resizeme"
-                       href="https://www.shutterstock.com/g/SPurno/video" target="_blank" id="slide-412-layer-13"
+                       href="https://www.vecteezy.com/members/spurno" target="_blank" id="slide-412-layer-13"
                        data-x="['left','left','center','center']" data-hoffset="['0','50','0','0']"
                        data-y="['top','top','top','top']" data-voffset="['0','540','590','400']"
                        data-width="none"
@@ -1349,12 +1221,12 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">Sign up from my link and get discount today!
+                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Poppins;">Buy wallpaper and vector graphics
                     </div>
 
                     <!-- LAYER NR. 23 -->
                     <a class="tp-caption rev-btn  tp-resizeme"
-                       href="https://www.shutterstock.com/en/g/GraphicsTrends?rid=324084232" target="_blank" id="slide-413-layer-13"
+                       href="https://www.freepik.com/author/pixellvector" target="_blank" id="slide-413-layer-13"
                        data-x="['left','left','center','center']" data-hoffset="['0','50','0','0']"
                        data-y="['top','top','top','top']" data-voffset="['0','540','590','400']"
                        data-width="none"
@@ -1377,7 +1249,7 @@
                        data-paddingbottom="[0,0,0,0]"
                        data-paddingleft="[35,35,35,35]"
 
-                       style="z-index: 9; white-space: normal; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:1px 1px 1px 1px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">Sign Up
+                       style="z-index: 9; white-space: normal; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;background-color:rgba(255, 255, 255, 0);border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:1px 1px 1px 1px;border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">Visit Now
                     </a>
                   </div>
                 </div>
@@ -1587,7 +1459,7 @@
 
                  style="z-index: 20; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Poppins;">2
               <div class="blurslider-line" style="display:inline-block;width:40px;height:1px;background:#fff;margin: 10px 20px 4px 15px;"></div>
-              Shutterstock
+              Vecteegy
             </div>
 
             <!-- LAYER NR. 32 -->
@@ -1668,7 +1540,7 @@
 
                  style="z-index: 23; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Poppins;">3
               <div class="blurslider-line" style="display:inline-block;width:40px;height:1px;background:#fff;margin: 10px 20px 4px 15px;"></div>
-              Sign up Today!
+              Freepik Profile
             </div>
 
             <!-- LAYER NR. 35 -->
