--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <ul class="navbar-nav g-font-weight-600">
                   <!-- Home - Submenu -->
                   <li class="nav-item g-mr-10--lg g-mr-20--xl">
-                    <a id="nav-link--home" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="#"
+                    <a id="nav-link--home" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="https://spurno.github.io"
                        aria-haspopup="true"
                        aria-expanded="false"
                        aria-controls="nav-submenu--home">
