--- a/index2.html
+++ b/index2.html
@@ -76,7 +76,7 @@
               <!-- Navigation -->
               <div class="collapse navbar-collapse align-items-center flex-sm-row g-pt-10 g-pt-5--lg" id="navBar">
                 <ul class="navbar-nav g-font-weight-600">
-                  <!-- Home - Submenu -->
+                  <li class="nav-item g-mr-10--lg g-mr-20--xl">
                     <a id="nav-link--home" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="https://spurno.github.io"
                        aria-haspopup="true"
                        aria-expanded="false"
