--- a/motion-graphics-background.html
+++ b/motion-graphics-background.html
@@ -843,94 +843,134 @@
                 </header>
 
                 <div class="g-font-size-16 g-line-height-1_8 g-mb-30">
-                  <figure class="u-shadow-v25 g-mb-30">
-                    <img class="img-fluid w-100" src="blog/assets/img-temp/900x600/img1.jpg" alt="SPurno Animation Studio">
-                  </figure>
-
-                  <p>Aliquam ante ipsum, maximus in orci ut, blandit aliquam ipsum. Phasellus sed tortor non magna lobortis faucibus. Mauris pharetra convallis urna, eu porttitor velit pretium eget. Vestibulum vehicula quis felis eget imperdiet. Sed vulputate tincidunt facilisis. Morbi eu suscipit dolor. Quisque nec turpis quis ante gravida placerat non at turpis. Phasellus tincidunt nisi eget posuere porta.</p>
-
-                  <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary">Top Tools for Designing Motion Graphics Backgrounds.</h3>
+                  <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                    <div class="watermark">SPurno Animation Studio</div>
+                    <video preload="auto" controls controls="controls" poster="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-5.jpg" __idm_id__="8193">
+                      <source src="videos/animated-background-stock-video-for-premium-download-5.mp4" type="video/webm;">
+                        <source src="videos/animated-background-stock-video-for-premium-download-5.mp4" type="video/mp4;">
+                    </video>
                   </div>
 
-                  <p>Consectetur adipiscing elit. In risus neque, semper sed congue eget, ultricies et tortor. Duis lorem libero, dapibus lacinia tellus id, pulvinar rutrum diam. Cras tempor lectus quis erat facilisis, a commodo mi volutpat. Sed vitae libero libero. Vestibulum non leo lobortis, placerat est a, laoreet mauris. Aenean vitae erat interdum, dignissim tellus quis, pellentesque libero. Nullam feugiat magna non justo sodales mattis. Phasellus mattis velit justo, non hendrerit felis tincidunt vitae. In at mi finibus, finibus sem dictum, convallis libero. In condimentum euismod nunc id dapibus. Praesent sagittis posuere felis et viverra. Mauris eros dui, malesuada nec risus nec, placerat porta sem.</p>
+                  <p>Lets' jump into the details about Background Animation for your videos</p>
+                  <h5>What is Video Background Animation?</h5>  
 
-                  <p>Cras sit amet mi eros. Pellentesque auctor, massa at laoreet lobortis, mi lorem commodo enim, non mollis arcu erat ac augue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris maximus enim in mauris ornare bibendum. Cras bibendum, nibh non interdum lacinia, sem augue convallis nibh, sit amet eleifend lacus felis quis turpis. Suspendisse potenti.</p>
+                  <p>Video background animation refers to the use of video content as a moving background on a website. Unlike static images or simple color backgrounds, video backgrounds can include anything from abstract animations and nature scenes to product showcases and brand stories. These animations add depth and interest to a webpage, creating an immersive experience for users.</p>
 
-                  <figure class="text-center text-md-left float-md-left g-pr-30--sm g-py-20 mb-0">
-                    <img class="u-shadow-v25 img-fluid g-width-300" src="blog/assets/img-temp/500x650/img1.jpg" alt="SPurno Animation Studio">
-                    <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
-                      <em>A caption for the above image.</em>
-                    </figcaption>
-                  </figure>
+                  <p>Find & Download Free Graphic Resources for Animation Background. 849000+ Vectors, Stock Photos & PSD files. ✓ Free for commercial use ✓ High Quality Images.</p>
 
-                  <p>Proin laoreet massa vitae pulvinar accumsan. Aenean auctor ipsum mauris, et sodales odio tristique non. Quisque eget diam a mi condimentum ullamcorper imperdiet sed urna. Pellentesque cursus convallis blandit. Mauris lorem eros, consequat et rutrum id, vestibulum quis felis. Proin non mollis eros. Curabitur vel laoreet mauris.</p>
-
-                  <p>Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu. Donec sed diam mattis, ullamcorper eros eu, aliquam dui. Maecenas rutrum suscipit risus sed posuere. Vestibulum imperdiet turpis mauris, sit amet consectetur ex porttitor ut. Duis sit amet auctor nunc. Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Mauris et porttitor diam. In semper volutpat mauris, ac fermentum orci commodo vitae. Curabitur ut feugiat tellus. Quisque consequat pharetra massa ultricies auctor. Sed mollis vulputate sapien eget tincidunt. Curabitur tempus lacus a sapien rutrum, feugiat blandit nunc tincidunt. Donec nec ornare tellus nunc elit rhoncus ligula.</p>
-
-                  <p>In neque ipsum, auctor eu bibendum cursus, fringilla sed magna. Vestibulum lobortis libero et lectus congue efficitur. Suspendisse varius varius finibus. Maecenas luctus convallis euismod.</p><br>
-
-                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">SPurno Animation Studio</h3>
-
-                  <p>Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu. Donec sed diam mattis, ullamcorper eros eu, aliquam dui. Maecenas rutrum suscipit risus sed posuere. Vestibulum imperdiet turpis mauris, sit amet consectetur ex porttitor ut. Duis sit amet auctor nunc.</p>
-
-                  <div class="g-width-70x--md 1mx-auto g-my-40">
-                    <blockquote class="blockquote g-color-primary g-brd-2 g-brd-primary--hover text-uppercase g-font-size-22 g-transition-0_2 g-mb-30">
-                      <p>Best Practices for Using Motion Graphics in Presentations</p>
-                      <footer class="blockquote-footer g-font-size-12">John Doe</footer>
-                    </blockquote>
+                  <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                    <div class="watermark">SPurno Animation Studio</div>
+                    <video preload="auto" controls controls="controls" poster="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-7.jpg" __idm_id__="8193">
+                      <source src="videos/animated-background-stock-video-for-premium-download-6.mp4" type="video/webm;">
+                        <source src="videos/animated-background-stock-video-for-premium-download-6.mp4" type="video/mp4;">
+                    </video>
                   </div>
 
-                  <p>Adipiscing elit, in risus neque, semper sed congue eget, ultricies et tortor. Duis lorem libero, dapibus lacinia tellus id, pulvinar rutrum diam. Cras tempor lectus quis erat facilisis, a commodo mi volutpat. Sed vitae libero libero. Vestibulum non leo lobortis, placerat est a, laoreet mauris. Aenean vitae erat interdum, dignissim tellus quis, pellentesque libero. Nullam feugiat magna non justo sodales mattis. Phasellus mattis velit justo, non hendrerit felis tincidunt vitae. In at mi finibus, finibus sem dictum, convallis libero. In condimentum euismod nunc id dapibus. Praesent sagittis posuere felis et viverra. Mauris eros dui, malesuada nec risus nec, placerat porta sem. Suspendisse id quam in ante lobortis fringilla. Aenean euismod ante eget  auctor fringilla. Morbi consequat ut felis a scelerisque. Aliquam purus sem, rutrum sit amet ligula a, tristique porttitor mauris.</p>
+                  <p>A well-crafted video background can communicate your brand’s message effectively within seconds. Whether it’s showcasing a product in action or telling a story, video backgrounds can deliver complex information quickly and engagingly.</p>
+
+                  <p>When using an animated video background, less is often more. The video should be relevant to your content and not overwhelm the visitor. Subtle animations that enhance rather than distract from the main content are key.</p>
+
+                  <p>Large video files can slow down your website, leading to poor user experience and lower SEO rankings. Optimize your videos by compressing file sizes, using efficient video formats (like MP4), and enabling lazy loading to improve load times.</p><br>
+
+                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">VISIT ANIMATION STUDIO</h3>
+
+                  <p>Your video background animation should look great on all devices, from desktops to smartphones. Use responsive design techniques to ensure that your video adjusts correctly across different screen sizes without compromising quality.</p>
+                    <!-- Banners -->
+                    <div class="row">
+                      <div class="col-lg-6 g-mb-30">
+                        <!-- Article -->
+                        <article class="row align-items-stretch text-center mx-0">
+                          <!--Article Content-->
+                          <div class="col-sm-6 g-bg-black g-px-30 g-py-45">
+                            <h3 class="h4 g-color-white g-font-weight-600 text-uppercase g-mb-25">Adobe
+                              <span class="d-block g-color-primary g-font-weight-700">Stock</span>
+                            </h3>
+                            <p class="g-color-gray-dark-v5 g-mb-25">Visit AdobeStock Site for more animated background </p>
+                            <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">SHOP NOW</a>
+                          </div>
+                          <!-- End Article Content -->
+
+                          <!-- Article Image -->
+                          <div class="col-sm-6 px-0 g-bg-size-cover" data-bg-img-src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-1.jpg"></div>
+                          <!-- End Article Image -->
+                        </article>
+                        <!-- End Article -->
+                      </div>
+
+                      <div class="col-lg-6 g-mb-30">
+                        <!-- Article -->
+                        <article class="row align-items-stretch text-center mx-0">
+                          <!--Article Content-->
+                          <div class="col-sm-6 g-bg-black g-px-30 g-py-45">
+                            <h3 class="h4 g-color-white g-font-weight-600 text-uppercase g-mb-25">NEED
+
+                              <span class="d-block g-color-primary g-font-weight-700">CUSTOM</span>
+
+                            </h3>
+                            <p class="g-color-gray-dark-v5 g-mb-25">You can also hire for custom video and color correction</p>
+                            <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://www.behance.net/farukahmedany/stock">Hire SPurno</a>
+                          </div>
+                          <!-- End Article Content -->
+
+                          <!-- Article Image -->
+                          <div class="col-sm-6 px-0 g-bg-size-cover" data-bg-img-src="../../assets/img-temp/500x600/img3.jpg"></div>
+                          <!-- End Article Image -->
+                        </article>
+                        <!-- End Article -->
+                      </div>
+                    </div>
+                    <!-- End Banners -->
+
+                  <p>Search from thousands of royalty-free "Animation Background" stock images and video for your next project. Download royalty-free stock photos, vectors</p>
 
                   <figure class="text-center g-my-40">
-                    <img class="u-shadow-v25 img-fluid" src="blog/assets/img-temp/430x270/img1.jpg" alt="SPurno Animation Studio">
+                    <img class="u-shadow-v25 img-fluid" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-1.jpg" alt="Animated Background Stock Video">
                     <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
-                      <em>A caption for the above image.</em>
+                      <em>Animated Background library has over 135+ backgrounds that you can choose from that are all mobile-optimized!</em>
                     </figcaption>
                   </figure>
 
-                  <p>Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus. Vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu. Donec sed diam mattis, ullamcorper eros eu, aliquam dui. Maecenas rutrum suscipit risus sed posuere. Vestibulum imperdiet turpis mauris, sit amet consectetur ex porttitor ut. Duis sit amet auctor nunc.</p><br>
+                  <p>Get Animated Background that includes cgi & design, from our library of Backgrounds Motion Graphics. Get unlimited downloads with an Envato subscription!</p><br>
 
                   <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">Now and Future</h3>
 
-                  <p>Praesent sagittis posuere felis et viverra. Mauris eros dui, malesuada nec risus nec, placerat porta sem. Suspendisse id quam in ante lobortis fringilla. Aenean euismod ante eget auctor fringilla. Morbi consequat ut felis a scelerisque. Aliquam purus sem, rutrum sit amet ligula a, tristique porttitor mauris.</p>
+                  <p>Choose some other categories of animated screen.</p>
 
                   <ul class="list-unstyled g-font-size-16 g-my-30">
                     <li class="g-mb-15">
                       <h4 class="h6 d-flex align-items-baseline">
                         <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Wrapbootstrap Marketplace egestas eget lectus vel, pretium semper tellus</span>
+                        <span>Presentation Slides</span>
                       </h4>
                     </li>
                     <li class="g-mb-15">
                       <h4 class="h6 d-flex align-items-baseline">
                         <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Google Adwords &amp; Adsense purus sem, rutrum sit amet ligula a, tristique port</span>
+                        <span>Motion Background</span>
                       </h4>
                     </li>
                     <li class="g-mb-15">
                       <h4 class="h6 d-flex align-items-baseline">
                         <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Web Design with UX/UI enim a varius condimentum, nunc elit rhoncus</span>
+                        <span>Device Mockup</span>
                       </h4>
                     </li>
                     <li class="g-mb-15">
                       <h4 class="h6 d-flex align-items-baseline">
                         <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Digital Marketing scelerisque libero diam, nec tempor justo hendreri</span>
+                        <span>Digital Wallpaper</span>
                       </h4>
                     </li>
                     <li class="g-mb-15">
                       <h4 class="h6 d-flex align-items-baseline">
                         <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Support Forum &amp; Community rutrum suscipit risus sed posuere</span>
+                        <span>iPhone Mockup</span>
                       </h4>
                     </li>
                     <li>
                       <h4 class="h6 d-flex align-items-baseline">
                         <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>SPurno Animation Studio</span>
+                        <span>Infographics</span>
                       </h4>
                     </li>
                   </ul>
